<resources>
    <string name="app_name">MozCarbon</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="greetings">Escolha uma opção na lista abaixo</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="msg_holder">You have selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_msg">A iniciar sessão...</string>
    <string name="success_login_msg">Iniciou sessão com sucesso!</string>
    <string name="user_credentials_invalid_msg">Credênciais inválidas!</string>
    <string name="failed_sign_in_msg">Ocorreu um erro!</string>
    <string name="wrong_text_input">Tem alguns campos inválidos!</string>
    <string name="no_data_available">Vazio!</string>
    <string name="loading_data">A carregar...</string>
    <string name="date_sale_fragment">Data</string>
    <string name="error_sale_fragment">Ocorreu um erro no carregamento!</string>
    <string name="error_sale_fragment_fail">Ocorreu um erro!</string>
    <string name="loading_sale_fragment">A processar venda...</string>
    <string name="success_sale_fragment">Adicionou venda com sucesso!</string>
    <string name="error_sale_fragment_failed">Ocorreu um erro na venda!!</string>
    <string name="missing_data_sale_fragment">tem campos em falta!</string>
    <string name="error_sale_fragment_fail_gps">Não deu permissão a GPS!</string>
    <string name="hint_save">Salvar</string>
    <string name="hint_clear">Limpar</string>
    <string name="dialog_title">Assinatura</string>
    <string name="use_same_signature">Usar a mesma assinatura</string>
    <string name="act_qty">Quantidade</string>
    <string name="act_total_sale">Total(MT)</string>
    <string name="act_number_sales_installments">Nº de Prestações</string>
    <string name="act_value_to_pay_sales_installments">Valor da prestação a pagar</string>
    <string name="act_pay_method">Método de Pagamento</string>
    <string name="act_date_picker">Data</string>
    <string name="btn_process_sale">Processar</string>
    <string name="act_products">Produto</string>
    <string name="act_client">Cliente</string>
    <string name="txtv_login_title">MozCarbon</string>
    <string name="txtv_login_inputs_title">Iniciar Sessão</string>
    <string name="input_email">E-mail</string>
    <string name="input_password">Palavra-passe</string>
    <string name="list_sold_items_title">Lista de Vendas</string>
    <string name="add_sale_title">Adicionar Venda</string>
    <string name="btn_create_client">Criar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="act_contact">Contacto</string>
    <string name="act_email">E-mail( Opcional)</string>
    <string name="act_address">Morada</string>
    <string name="act_name">Nome</string>
    <string name="dialog_title_add_client">Adicionar Cliente</string>
    <string name="fields_invalid_client">Campos inválidos/vazios!</string>
    <string name="create_client_ok">Adicionou o cliente com sucesso!</string>
    <string name="error_client">Ocorreu um erro!</string>
    <string name="failed_client">Não foi possível criar o cliente!</string>

    <string name="NEXT">Proximo</string>
    <string name="survey_submited">Inquerito submetido com sucesso!</string>

    <string name="error_get_products">Erro ao carregar produtos </string>
    <string name="error_get_sales">Erro ao carregar vendas</string>
    <string name="act_ref_street">Perto/Rua/Beco</string>
    <string name="act_pr_use">Uso do fogão</string>
    <string name="act_pr_type">Tipo do fogão</string>
    <string name="act_agent">Armazém</string>
    <string name="act_nr_house">Nº da Casa</string>
    <string name="act_quart">Quarteirão</string>
    <string name="act_area">Bairro</string>
    <string name="act_region">Região</string>
    <string name="add_sale_prest_title">Adicionar Prestação</string>
    <string name="add_sale_first_prest_title">Adicionar 1a Prestação</string>
    <string name="remain">Falta pagar</string>
    <string name="success_sale_next_prest_fragment">Adicionou a prestação com sucesso!</string>
    <string name="error_sale_next_prest_fragment_failed">Ocorreu um erro adicionar prestação!</string>
    <string name="search_sale">Procurar Vendas</string>
    <string name="empty_sales">Não encontrados vendas nessa pesquisa!</string>
    <string name="failed_get_sales">Ocorreu um erro na pesquisa!</string>
    <string name="scan_qr_sale">Scan QR</string>
    <string name="product_not_sold">O produto ainda não foi vendido!</string>
    <string name="product_do_not_exists">Produto não existe no armazém!</string>
    <string name="product_not_found">Produto não encontrado!</string>
    <string name="error_get_qr_code_data">Error on QRCode!</string>
    <string name="info_alert_title">Informações</string>
    <string name="list_products">Lista de Produtos</string>
    <string name="failed_get_products">Falha para listar produtos</string>
    <string name="logout">Terminar sessão</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="sales_alert">Vendas</string>
    <string name="failed_to_add_sale">Falha ao adicionar venda!</string>
    <string name="add_sale_ok">Adicionou venda com sucesso!</string>
    <string name="failed_to_add_sale_client_id">Erro no nome do cliente!</string>
    <string name="failed_to_add_sale_product_id">Erro no nome do produto!</string>
    <string name="failed_to_add_sale_processing">Erro ao processar a venda!</string>
    <string name="info_alert_offline_sale_data">Esta venda só será enviada assim que estiver conectado a internet!</string>
    <string name="open_invoices_folders">Abrir pasta dos recibos</string>
    <string name="open_invoice_file_with">Abrir o recibo com</string>
    <string name="list_clients_title">Lista de Clientes</string>
    <string name="error_get_clients">Erro ao carregar Clientes</string>
    <string name="welcome_user">Bem-vindo Utilizador</string>
    <string name="survey_title">Gestão de Inquéritos</string>
    <string name="error_answer_fragment_failed">Erro ao submeter as respostas!</string>
    <string name="act_pay">Codigo do pagamento</string>
    <string name="act_pay_mpesa">Codigo do pagamento MPESA</string>
    <string name="act_pay_contaMovel">Codigo do pagamento Conta Móvel</string>
    <string name="act_pay_transferencia">Número de conta</string>
    <string name="act_age">Idade</string>
    <string name="act_gender">Genero</string>

</resources>
