<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mdtp_white"
    android:orientation="vertical">

    <View
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <AutoCompleteTextView
                        android:id="@+id/act_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <AutoCompleteTextView
                        android:id="@+id/act_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_address"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <AutoCompleteTextView
                        android:id="@+id/act_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <AutoCompleteTextView
                        android:id="@+id/act_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/act_contact"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/mdtp_transparent_black" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_cancel"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_weight="0.50"
                    android:background="@color/mdtp_white"
                    android:text="@string/btn_cancel"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black" />

                <View
                    android:layout_width="@dimen/spacing_mlarge"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/bt_create_client"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_weight="0.50"
                    android:background="@drawable/btn_rect_primary"
                    android:text="@string/btn_create_client"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
