<?xml version="1.0" encoding="utf-8"?>
<tools:RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_grey_800_overlay" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/txtv_login_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="sans-serif-light"
            android:text="-----"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:text="@string/txtv_login_inputs_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText.White.Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/input_email"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_10"
                android:theme="@style/EditText.White" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditText.White.Hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_10"
                android:theme="@style/EditText.White" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mxlarge" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textStyle="bold"
                android:tint="@color/blue_800"
                app:backgroundTint="@android:color/white"
                app:fabSize="normal"
                app:rippleColor="@color/blue_800"
                app:srcCompat="@drawable/ic_arrow_right" />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:theme="@style/ProgressBar.White"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

    </LinearLayout>

</tools:RelativeLayout>